使用Tengine作为负载均衡器, 并对后端服务器进行健康检测

--- a/conf/loadbalance/nginx.conf
+++ b/conf/loadbalance/nginx.conf
@@ -10,6 +10,10 @@ http {
         server web_node01;
         server web_node02;
         server web_node03;
+
+        check interval=3000 rise=2 fall=5 timeout=1000 type=http;
+        check_http_send "HEAD / HTTP/1.0\r\n\r\n";
+        check_http_expect_alive http_2xx http_3xx;
     }
 
     include       mime.types;
@@ -40,6 +44,15 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
+        }
+        
+        
+        location /status {
+            check_status;
+
+            access_log   off;
+            #allow SOME.IP.ADD.RESS;
+            #deny all;
         }
     }
 
