--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   web_loadbalance:
-    image: nginx:${NGINX_VERSION}
+    image: axizdkr/tengine
     ports:
       - "${NGINX_LOADBALANCE_HOST_PORT}:80"
     volumes:
